# aurorarpc-api

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  docker-compose.yaml
x360connect-linker/: Cargo.toml  readme.md
x360connect-linker/src/: connection.rs  errors.rs  main.rs  rpc.rs
x360connect-linker/src/database/: game_data.rs  mod.rs  profile_data.rs  verify_key.rs
x360connect-linker/src/nova/: authenticate.rs  get_avatar.rs  get_title.rs  mod.rs  utils.rs  verify_connection.rs
x360connect-web/: Cargo.toml  Dockerfile  Rocket.toml  docker-compose.yaml
x360connect-web/assets/css/: base.css  base.css.map  base.scss  index.css  index.css.map  index.scss  reset.css  reset.css.map
x360connect-web/src/: access_key.rs  document.rs  game_data.rs  log_activity.rs  main.rs  utils.rs
x360connect-web/src/game/: model.rs
x360connect-web/src/modules/: database_status.rs  document.rs  mod.rs
x360connect-web/src/modules/game/: fill_data.rs  mod.rs  model.rs
x360connect-web/src/modules/user/: authenticate.rs  model.rs
x360connect-web/src/routes/: assets.rs  auth.rs  keys.rs  login.rs  login_req.rs  mod.rs
x360connect-web/src/routes/games/: activity_game.rs  download.rs  game.rs  mod.rs  upload.rs
x360connect-web/src/routes/profile/: keys.rs  mod.rs  profile.rs  upload.rs
x360connect-web/src/routes/ui/: index.rs  key.rs  mod.rs  profile.rs
x360connect-web/src/user/: authenticate.rs  mod.rs  model.rs  permission.rs
x360connect-web/templates/: base.html.tera  index.html.tera  login.html.tera  profile-keys.html.tera  profile.html.tera
(+9 files in other folders)
