[package]
name = "x360connect-linker"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.142"
anyhow = "1.0.98"
local-ip-address = "0.6.5"
futures = "0.3.31"
ipnetwork = "0.21.1"
simplelog = "0.12.2"
thiserror = "2.0.12"
if-addrs = "0.14.0"
log = "0.4.27"
yet-another-discord-rpc = "0.1.0"
config = {version = "0.15.14", features = ["toml"]}
x360connect-global = {path = "../x360connect-global"}
clap = { version = "4.5.45", features = ["derive"] }
toml = "0.9.5"
bytes = "1.10.1"
image = "0.25.6"

