[package]
name = "x360connect-web"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["serde_json", "secrets"] }
serde_json = "1.0.142"
serde = { version = "1.0", features = ["derive"] }
rocket_db_pools = {version = "0.2.0", features = ["mongodb"]}
dotenvy = "0.15.7"
oauth2 = "5.0.0"
reqwest = "0.12.22"
anyhow = "1.0.99"
rand = "0.9.2"
base64 = "0.22.1"
tera = { version = "1.20.0", default-features = false }
rocket_dyn_templates = {version = "0.2.0", features = ["tera"]}
rocket_okapi = { version = "0.9.0", features = ["swagger"] }
x360connect-global = {path = "../x360connect-global"}
log = "0.4.27"
ordermap = {version = "0.5.8", features = ["serde"]}
bytes = "1.10.1"
simplelog = "0.12.2"
url = "2.5.4"
